--- a/index.html
+++ b/index.html
@@ -1,13 +1,44 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>portfolio-app</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- SEO Meta Tags -->
+  <title>Aditya Choudhary | AI/ML Engineer & Full Stack Developer</title>
+  <meta name="description"
+    content="Portfolio of Aditya Choudhary - AI/ML Engineer, Full Stack Developer, and Data Scientist. Specializing in Machine Learning, Deep Learning, NLP, and building intelligent solutions." />
+  <meta name="keywords"
+    content="AI Engineer, ML Engineer, Full Stack Developer, Data Scientist, Python, React, TensorFlow, PyTorch, NLP, Machine Learning, Portfolio" />
+  <meta name="author" content="Aditya Choudhary" />
+
+  <!-- Open Graph / Social Media -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Aditya Choudhary | AI/ML Engineer" />
+  <meta property="og:description"
+    content="Portfolio showcasing AI/ML projects, skills, and experience in building intelligent solutions." />
+  <meta property="og:image" content="/images/og-image.png" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Aditya Choudhary | AI/ML Engineer" />
+  <meta name="twitter:description" content="Portfolio showcasing AI/ML projects, skills, and experience." />
+
+  <!-- Theme Color -->
+  <meta name="theme-color" content="#0f172a" />
+
+  <!-- Preconnect to Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
+    rel="stylesheet" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
