--- a/index.html
+++ b/index.html
@@ -24,19 +24,38 @@
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Aditya Choudhary | AI/ML Engineer" />
-  <meta name="twitter:description" content="Portfolio showcasing AI/ML projects, skills, and experience." />
+  <meta name="twitter:description"
+    content="Portfolio showcasing AI/ML projects, skills, and experience." />
 
   <!-- Theme Color -->
   <meta name="theme-color" content="#0f172a" />
 
-  <!-- Preconnect to Google Fonts -->
+  <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
     rel="stylesheet" />
 </head>
 
 <body>
+
+  <!-- 🔴 REQUIRED: Netlify static form for detection -->
+  <form
+    name="contact"
+    method="POST"
+    data-netlify="true"
+    netlify-honeypot="bot-field"
+    hidden
+  >
+    <input type="hidden" name="form-name" value="contact" />
+    <input type="hidden" name="bot-field" />
+    <input type="text" name="name" />
+    <input type="email" name="email" />
+    <textarea name="message"></textarea>
+  </form>
+  <!-- 🔴 END Netlify form -->
+
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
