--- a/index.html
+++ b/index.html
@@ -49,7 +49,11 @@
     hidden
   >
     <input type="hidden" name="form-name" value="contact" />
-    <input type="hidden" name="bot-field" />
+    <div style="display: none;">
+      <label>
+        Don't fill this out if you're human: <input name="bot-field" />
+      </label>
+    </div>
     <input type="text" name="name" />
     <input type="email" name="email" />
     <textarea name="message"></textarea>
